should fix missing images

--- a/src/index.html
+++ b/src/index.html
@@ -107,7 +107,7 @@
           style="font-family: 'Roboto Mono', monospace">
           <div class="flex flex-col items-center gap-2">
             <img
-              src="../images/icons8-next.js.svg"
+              src="./images/icons8-next.js.svg"
               alt="nextjs icon"
               class="w-24 h-24" />
             <p class="font-semibold">NextJS</p>
@@ -115,7 +115,7 @@
 
           <div class="flex flex-col items-center gap-2">
             <img
-              src="../images/tailwind-css.svg"
+              src="./images/tailwind-css.svg"
               alt="tailwind css icon"
               class="w-24 h-24" />
             <p class="font-semibold text-center">Tailwind CSS</p>
@@ -123,7 +123,7 @@
 
           <div class="flex flex-col items-center gap-2">
             <img
-              src="../images/icons8-react-80.svg"
+              src="./images/icons8-react-80.svg"
               alt="javascript icon"
               class="w-24 h-24" />
             <p class="font-semibold">React</p>
@@ -131,7 +131,7 @@
 
           <div class="flex flex-col items-center gap-2">
             <img
-              src="../images/icons8-css3-96.svg"
+              src="./images/icons8-css3-96.svg"
               alt="css icon"
               class="w-24 h-24" />
             <p class="font-semibold">CSS</p>
@@ -139,7 +139,7 @@
 
           <div class="flex flex-col items-center gap-2">
             <img
-              src="../images/icons8-javascript-96.svg"
+              src="./images/icons8-javascript-96.svg"
               alt="javascript icon"
               class="w-24 h-24" />
             <p class="font-semibold">JavaScript</p>
@@ -147,7 +147,7 @@
 
           <div class="flex flex-col items-center gap-2">
             <img
-              src="../images/icons8-html-5-96.svg"
+              src="./images/icons8-html-5-96.svg"
               alt="html icon"
               class="w-24 h-24" />
             <p class="font-semibold">HTML</p>
@@ -176,9 +176,8 @@
               class="featured-project-img-01-div cursor-all-scroll overflow-scroll h-[300px] rounded">
               <div class="featured-project-img-01 transition-all duration-500">
                 <img
-                  src="../images/lemonade-stand.webp"
-                  alt="paytm clone"
-                  class="" />
+                  src="./images/lemonade-stand.webp"
+                  alt="cocktail webshop" />
               </div>
             </div>
           </div>
