edited section header

--- a/src/index.html
+++ b/src/index.html
@@ -163,7 +163,7 @@
       id="projects">
       <div class="flex items-center justify-center gap-12 pb-12">
         <div class="h-px flex-1 bg-blue-500 hidden sm:block"></div>
-        <h2 class="text-4xl font-bold text-center">Some Things I’ve Built</h2>
+        <h2 class="text-4xl font-bold text-center">Project(s)</h2>
         <div class="h-px flex-1 bg-blue-500 hidden sm:block"></div>
       </div>
 
